split download and extract

--- a/runbooks/DevSecOps runbooks/2.00.Hasicorp_Vault_CLI_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/2.00.Hasicorp_Vault_CLI_Installation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Hasicorp Vault CLI Installation\n",
     "## DevOpsLab Example\n",
@@ -11,89 +12,100 @@
     "### Prerequisite tasks\n",
     "- Knowing admin user and password for the target hots (**NOT YET IN THIS NOTEBOOK VERSION**)\n",
     "- No other python dependencies are needed."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Connect to target system (optional)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%run \"0.0. Connect to the target system.ipynb\""
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Install latest version of Hasicorp Vault"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Execute the following commands:\n",
     "\n",
-    "- First, download and extract the hasicorp vault\n",
-    "- Then, install it"
-   ],
-   "metadata": {}
+    "- First, download the hasicorp vault zip file\n",
+    "- Then, extract the files\n",
+    "- Finally, install it"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "%%bash\r\n",
-    "cd\r\n",
-    "if [ ! -f vault_1.6.3_linux_amd64.zip ];\r\n",
-    "  then \r\n",
-    "    curl \"https://releases.hashicorp.com/vault/1.6.3/vault_1.6.3_linux_amd64.zip\" -o \"vault_1.6.3_linux_amd64.zip\"\r\n",
-    "    echo \"file vault_1.6.3_linux_amd64.zip downloaded\"\r\n",
-    "  else\r\n",
-    "    echo \"File vault_1.6.3_linux_amd64.zip already downloaded.\"\r\n",
-    "fi\r\n",
-    "if [ ! -f ./vault ]\r\n",
-    "  then\r\n",
-    "    unzip vault_1.6.3_linux_amd64.zip\r\n",
-    "    echo \"Vault extracted\"\r\n",
-    "  else\r\n",
-    "    echo \"Vault already extracted.\"\r\n",
+    "%%bash\n",
+    "cd\n",
+    "if [ ! -f vault_1.6.3_linux_amd64.zip ];\n",
+    "  then \n",
+    "    curl \"https://releases.hashicorp.com/vault/1.6.3/vault_1.6.3_linux_amd64.zip\" -o \"vault_1.6.3_linux_amd64.zip\"\n",
+    "    echo \"file vault_1.6.3_linux_amd64.zip downloaded\"\n",
+    "  else\n",
+    "    echo \"File vault_1.6.3_linux_amd64.zip already downloaded.\"\n",
     "fi"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "%%bash -s \"$target_host\" \"$user\" \"$password\"\r\n",
-    "if [ ! -f ~/vault ];\r\n",
-    "  then\r\n",
-    "    unzip vault_1.6.3_linux_amd64.zip\r\n",
-    "    #echo $3 | sudo -S ./vault/install\r\n",
-    "    if [ $? -eq 0 ];\r\n",
-    "      then \r\n",
-    "        echo \"VAULT CLI succesfully installed\"\r\n",
-    "    fi\r\n",
-    "  else\r\n",
-    "    echo \"VAULT ClI already installed\"\r\n",
-    "fi\r\n",
-    "#/usr/local/bin/vault --version\r\n",
-    "~/vault --version"
-   ],
+   "id": "dfdcb24f",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd\n",
+    "if [ ! -f ./vault ]\n",
+    "  then\n",
+    "    unzip vault_1.6.3_linux_amd64.zip\n",
+    "    echo \"Vault extracted\"\n",
+    "  else\n",
+    "    echo \"Vault already extracted.\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
-   }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
+    "if [ ! -f ~/vault ];\n",
+    "  then\n",
+    "    unzip vault_1.6.3_linux_amd64.zip\n",
+    "    #echo $3 | sudo -S ./vault/install\n",
+    "    if [ $? -eq 0 ];\n",
+    "      then \n",
+    "        echo \"VAULT CLI succesfully installed\"\n",
+    "    fi\n",
+    "  else\n",
+    "    echo \"VAULT ClI already installed\"\n",
+    "fi\n",
+    "#/usr/local/bin/vault --version\n",
+    "~/vault --version"
+   ]
   }
  ],
  "metadata": {
