Detailing and fixing HVAC notebook

--- a/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_HVAC_Examples.ipynb
+++ b/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_HVAC_Examples.ipynb
@@ -12,8 +12,9 @@
     "### Prerequisite tasks\n",
     "To set up and run this example, you must first set up the following:\n",
     "\n",
-    "- Configure your Hasicorp Vault server \n",
-    "- Install the hvac library in your environment using *pip install hvac*\n"
+    "- Configure your Hasicorp Vault server using **2.01.Hasicorp_Vault_Server_Installation.ipynb** notebook\n",
+    "- (optional if you want to verify: Install Hasicorp Vault CLI using **2.00.Hasicorp_Vault_CLI_Installation.ipynb** noteboook)\n",
+    "- Install the Hvac library in your environment using **2.08.Hasicorp_Vault_Hvac_Library_Installation.ipynb** notebook\n"
    ]
   },
   {
@@ -114,24 +115,6 @@
     "print(result)\n",
     "print()\n",
     "print('The value of the secret \"my_other_secret\" is {result_value}'.format(result_value=result['data']['data']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### List the available secret in one path\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_response=client.secrets.kv.v2.list_secrets(path='test3')\n",
-    "print('The secret path list under \"secret\" prefix are : {secretos}'\n",
-    "      .format(secretos=','.join(list_response['data']['keys'])))"
    ]
   },
   {
